--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=hue5
+application.vendor=maxim
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,10 +33,15 @@ dist.jar=${dist.dir}/hue5.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/hue5
+endorsed.classpath=
 excludes=
+file.reference.htmllexer.jar=C:\\Schule\\POS\\htmlparser1_6_20060610\\htmlparser1_6\\lib\\htmllexer.jar
+file.reference.htmlparser.jar=C:\\Schule\\POS\\htmlparser1_6_20060610\\htmlparser1_6\\lib\\htmlparser.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.htmllexer.jar}:\
+    ${file.reference.htmlparser.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
